some dark mode errors fixes

--- a/client/src/pages/NewRoom/NewRoom.css
+++ b/client/src/pages/NewRoom/NewRoom.css
@@ -110,19 +110,10 @@ textarea {
 
 .NewRoomInputContainer > div .NewRoomSubmit {
   width: 250px;
-  background-color: var(--main-color);
-  color: white;
   padding: 10px;
   border-radius: 7px;
   border: var(--main-color) solid 2px;
   font-weight: 700;
-}
-
-.NewRoomInputContainer > div .NewRoomSubmit:hover {
-  background-color: white;
-  color: var(--main-color);
-  padding: 10px;
-  border-radius: 7px;
 }
 
 .roomFacilities {
